Update heart icons

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         contentBox.classList.remove("content-modal-close");
         contentBox.removeAttribute("style");
         contentBox.innerHTML =
-          "Chúc em gái, ngày càng đẹp troaii =))). Sang tuổi mới code tung vũ trụ, giúp Amphy đặt chân vào dải ngân hà 2,0 <3. Chúc em chỉ nói lời hay ý đẹp, thùy mị nết na =)) được phiếu bé ngoan, được mọi người yêu thương nhất nhà <3 Happy birthday em yêuuuu <3 - Chị Huyền";
+          "Chúc em gái, ngày càng đẹp troaii =))). Sang tuổi mới code tung vũ trụ, giúp Amphy đặt chân vào dải ngân hà 2,0 ❤️. Chúc em chỉ nói lời hay ý đẹp, thùy mị nết na =)) được phiếu bé ngoan, được mọi người yêu thương nhất nhà ❤️ Happy birthday em yêuuuu ❤️ - Chị Huyền";
       };
       const openAFunc = () => {
         const contentBox = document.querySelector("#content-box");
@@ -372,7 +372,7 @@
         contentBox.classList.remove("content-modal-close");
         contentBox.removeAttribute("style");
         contentBox.innerHTML =
-          "chúc Huệ tuổi mới có nhiều điều mới mẻ hay ho nè he, như là: trọ mới trong thành phố để đi quẩy xuyên đêm với mọi người được nè he, người yêu mới để bớt dí anh nè he, level mới để ôm nhiều task khủng của Amphy nè he,... Amphy yêu em, Omri Kovi Elena yêu em nè he <3 - Anh Nam";
+          "chúc Huệ tuổi mới có nhiều điều mới mẻ hay ho nè he, như là: trọ mới trong thành phố để đi quẩy xuyên đêm với mọi người được nè he, người yêu mới để bớt dí anh nè he, level mới để ôm nhiều task khủng của Amphy nè he,... Amphy yêu em, Omri Kovi Elena yêu em nè he ❤️ - Anh Nam";
       };
       const openEFunc = () => {
         const contentBox = document.querySelector("#content-box");
