Update Duyen Birthday
Update Duyen Birthday

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 >
   <head>
     <meta charset="UTF-8" />
-    <title>Happy Birthday JAMIE</title>
+    <title>Happy Birthday DUYÊN</title>
     <style>
       /* If you can't see it just hit space in here*/
       body {
@@ -351,35 +351,35 @@
         contentBox.classList.remove("content-modal-close");
         contentBox.removeAttribute("style");
         contentBox.innerHTML =
-          "Chúc em gái, ngày càng đẹp troaii =))). Sang tuổi mới code tung vũ trụ, giúp Amphy đặt chân vào dải ngân hà 2,0 ❤️. Chúc em chỉ nói lời hay ý đẹp, thùy mị nết na =)) được phiếu bé ngoan, được mọi người yêu thương nhất nhà ❤️ Happy birthday em yêuuuu ❤️ - Chị Huyền";
+          "Chúc chị Duyên Seller sớm lên senior, sớm tìm được nhà và nương tay với tụi em :3 - Harry";
       };
       const openAFunc = () => {
         const contentBox = document.querySelector("#content-box");
         contentBox.classList.remove("content-modal-close");
         contentBox.removeAttribute("style");
         contentBox.innerHTML =
-          "Chúc Huệ tuổi mới sẽ đạt được những thứ mình muốn, tuổi mới có bồ - Anh Đạt";
+          "Chúc chị D sớm lên PM =)) - Felix";
       };
       const openMFunc = () => {
         const contentBox = document.querySelector("#content-box");
         contentBox.classList.remove("content-modal-close");
         contentBox.removeAttribute("style");
         contentBox.innerHTML =
-          "Chúc Huệ sinh nhật vui vẻ :v - Anh Tú/ Chúc Huệ tuổi mới ít bug lạ bug lùng, mau lên level cao nhé - Anh Chu";
+          "Chúc chị Duyên k nhầm tên em với Tín nưaz =))) - Smile";
       };
       const openIFunc = () => {
         const contentBox = document.querySelector("#content-box");
         contentBox.classList.remove("content-modal-close");
         contentBox.removeAttribute("style");
         contentBox.innerHTML =
-          "chúc Huệ tuổi mới có nhiều điều mới mẻ hay ho nè he, như là: trọ mới trong thành phố để đi quẩy xuyên đêm với mọi người được nè he, người yêu mới để bớt dí anh nè he, level mới để ôm nhiều task khủng của Amphy nè he,... Amphy yêu em, Omri Kovi Elena yêu em nè he ❤️ - Anh Nam";
+          "Chúc \"chị\" Duyên sớm tìm được nhà - TC / Chúc chị Duyên ngày một giàu hơn :))) - Veigar";
       };
       const openEFunc = () => {
         const contentBox = document.querySelector("#content-box");
         contentBox.classList.remove("content-modal-close");
         contentBox.removeAttribute("style");
         contentBox.innerHTML =
-          "Chúc Huệ tuổi mới khoẻ như trâu, code như trâu, gồng gánh Amphy - Anh Hiếu";
+          "chúc ko còn ai nhảy vào mồm chị Duyên nữa =))) - Bé Đào của Duyên";
       };
       document.addEventListener("keypress", (e) => {
         if (e.key === "x") {
@@ -419,11 +419,11 @@
 
       <div class="balloon">
         <div><span>☺</span></div>
-        <div onclick="openJFunc()"><span>J</span></div>
-        <div onclick="openAFunc()"><span>A</span></div>
-        <div onclick="openMFunc()"><span>M</span></div>
-        <div onclick="openIFunc()"><span>I</span></div>
-        <div onclick="openEFunc()"><span>E</span></div>
+        <div onclick="openJFunc()"><span>D</span></div>
+        <div onclick="openAFunc()"><span>U</span></div>
+        <div onclick="openMFunc()"><span>Y</span></div>
+        <div onclick="openIFunc()"><span>Ê</span></div>
+        <div onclick="openEFunc()"><span>N</span></div>
       </div>
     </div>
     <div class="content-modal content-modal-close" id="content-box"></div>
