--- a/index.html
+++ b/index.html
@@ -375,15 +375,17 @@
           "Mobile Team chúc Duyên ước gì được nấy, bách niên giai lão, sinh nhật vui vẻ, happy birthday ❤️ Yay";
       };
       const openEFunc = () => {
+        const modalBox = document.querySelector("#modal-container-sc");
         const contentBox = document.querySelector("#content-box");
-        contentBox.classList.remove("content-modal-close");
+        modalBox.classList.remove("content-modal-close");
         contentBox.removeAttribute("style");
         contentBox.innerHTML =
           "<div>Chúc chị Duyên k nhầm tên em với Tín nưaz =))) - Smile <br/><br/> chúc ko còn ai nhảy vào mồm chị Duyên nữa =))) - Bé Đào của Duyên</div>";
       };
       const closeMessageModal = () => {
+        const modalBox = document.querySelector("#modal-container-sc");
         const contentBox = document.querySelector("#content-box");
-          contentBox.classList.add("content-modal-close");
+          contentBox.modalBox.add("content-modal-close");
           setTimeout(() => {
             contentBox.setAttribute("style", "display:none;");
           }, 300);
@@ -429,7 +431,7 @@
         <div onclick="openEFunc()"><span>N</span></div>
       </div>
     </div>
-    <div class="content-modal content-modal-close">
+    <div class="content-modal content-modal-close" id="modal-container-sc">
       <div onclick="closeMessageModal()">Close</div>
       <div id="content-box"></div>
     </div>
